# overwatch7six-netauto-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  render.yml
clab/: hq-tx-01.clab.yml
clab/configs/startup/: acc1.cfg  acc2.cfg  dist1.cfg  rtr1.cfg
data/: load_sot.py
data/fixtures/: device_types.yml  devices.yml  interfaces.yml  ip_addresses.yml  sites.yml  vlans.yml
docs/: architecture.md  assumptions.md  cmmc-mapping.md  runbook.md
evidence/: generate_evidence.py
evidence/templates/: evidence_pack.md.j2
golden_config/: compliance_rules.yaml  settings.yml  trigger_render.py
golden_config/templates/: base.j2
golden_config/templates/partials/: _aaa.j2  _banner.j2  _logging.j2  _ntp.j2  _snmp.j2
golden_config/templates/roles/: access.j2  distribution.j2  edge.j2
nautobot/: docker-compose.override.yml  docker-compose.yml
nautobot/environment/: creds.env.example  local.env.example
nautobot/jobs/: __init__.py  deploy_intended.py  generate_evidence.py  render_golden_config.py
nornir/: config.yaml
nornir/tasks/: backup.py  compliance_report.py  remediate.py
tests/: conftest.py  test_fixtures.py  test_render.py
