[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "overwatch7six-netauto-demo"
version = "0.1.0"
description = "NTC portfolio demo: Nautobot + Containerlab + Nornir compliance automation"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Brad Baker", email = "bbaker@patriot7six.com" }]

dependencies = [
  "pynautobot>=2.1.0,<3.0",
  "nornir>=3.4.0,<4.0",
  "nornir-nautobot>=3.1.0,<4.0",
  "nornir-napalm>=0.4.0,<1.0",
  "nornir-utils>=0.2.0,<1.0",
  "napalm>=4.1.0,<5.0",
  "napalm-eos",
  "ntc-templates>=4.1.0,<5.0",
  "jinja2>=3.1.0,<4.0",
  "pyyaml>=6.0,<7.0",
  "rich>=13.0,<14.0",
  "click>=8.1,<9.0",
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "pytest>=8.0",
  "pytest-cov",
  "yamllint>=1.35",
  "djlint>=1.34",
  "jsonschema>=4.22",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["data", "nornir", "nautobot", "tests", "evidence"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # bugbear
  "UP",       # pyupgrade
  "C4",       # comprehensions
  "SIM",      # simplify
  "TID",      # tidy imports
  "RUF",      # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["data", "nornir_tasks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["data", "nornir", "nautobot"]
omit = ["*/tests/*", "*/.venv/*"]
